fix underline too wide on view-content-work button

--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -423,8 +423,9 @@
 
     &-work {
       cursor: pointer;
+      align-self: center;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
       gap: 0.5rem;
       margin-top: 2rem;
